# libsnark-ocaml

./: .gitignore  depends.sh  dune  libsnark.opam
.github/workflows/: dune.yml
bench/: dune  field_project.ml
examples/election/: dune  impl.ml
examples/election_gpu/: dune  impl.ml
examples/imperative_test/: dune  imperative_test.ml
examples/merkle_update/: dune  merkle_update.ml
examples/tutorial/: dune  tutorial.ml
snarky_curve/tests/: dune  snarky_curve_tests.ml
snarky_universe/: curve.ml  dune  group.ml  snarky_universe.ml  snarky_universe.mli
src/: dune
src/bindings/: dune
src/cpp_string/: dune
src/cpp_vector/: dune
src/gpu_prover/: dune  gpu_prover.gpu.ml
src/groth16_gpu_prover/: dune
src/libsnark_bindings/: dune
src/snark_caml_bn128/: dune
src/snark_caml_common/: dune
src/snark_caml_mnt298/: dune
src/snark_caml_mnt753/: dune
