opam-version: "1.2"
name: "libsnark"
maintainer: "opensource@o1labs.org"
authors: ["O(1) Labs, LLC <opensource@o1labs.org>"]
homepage: "https://github.com/o1labs/libsnark-ocaml"
bug-reports: "https://github.com/o1labs/libsnark-ocaml/issues"
dev-repo: "git+https://github.com/o1labs/libsnark-ocaml.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
url {
  src: "git://github.com/o1-labs/libsnark-ocaml.git"
}
depends: [
  "ocaml" {>= "4.07.0"}
  "core_kernel" {>= "v0.12" & < "v0.13" }
  "ppx_deriving"
  "ppx_jane"
  "ctypes"
  "ctypes_foreign_libffi"
  "bisect_ppx"
  "dune"                {build & >= "2.0"}
  "snarky"
  "snarky_integer"
  "snarky_curve"
  "snarky_signature"
  "sponge"
  "snarkette"
  "ppx_deriving_yojson"
]
descr: "
A wrapper library around libsnark
"
